# ra-hcp

./: .env.example  .gitignore  .rahcp.example.yaml  404.html  Makefile  PLAN.md  README.md  TODO.md  abstract_s3_plan.md  cliff.toml  dagger.json  docker-compose.yml  index.html  objects.inv  plan_new_features.md  plan_search.md  plan_sync.md  pyproject.toml  query_plan.md  sdk_plan.md  search.json  sitemap.xml  todo.md  todo2.md  todo3.md  todo4.md  todos5.md  zensical.toml
.aws/: config
.claude/: README.md  settings.json
.claude/commands/: fix-docs.md
.claude/hooks/: format.sh  hooks.json  pre-commit
.dagger/: build.go  checks.go  e2e.go  go.mod  go.sum  main.go  publish.go  scan.go  serve.go  test.go
.docker/: backend.dockerfile  docker-compose.yml  frontend.dockerfile
.github/: CODE_OF_CONDUCT.md  SECURITY.md  dependabot.yml
.github/workflows/: ci.yml  codeql.yml  docs.yml  release.yml  scorecard.yml  storybook.yml  trufflehog.yml
.rahcp/: config.example.yaml
api/: index.html
architecture/: index.html
backend/: mock_server.py  pyproject.toml
backend/app/: main.py
backend/app/api/: dependencies.py  errors.py
backend/app/api/v1/: router.py
backend/app/api/v1/endpoints/: auth.py  content_classes.py  group_accounts.py  health_check.py  iiif.py  lance.py  licenses.py  logs.py  network.py  replication.py  statistics.py  user_accounts.py
backend/app/api/v1/endpoints/mapi/: erasure_coding.py  group_accounts.py  health_check.py  logs.py  namespaces.py  replication.py  retention_classes.py  statistics.py  support.py  tenants.py  user_accounts.py
backend/app/api/v1/endpoints/mapi/namespace/: access.py  compliance.py  indexing.py  management.py  statistics.py  templates.py
backend/app/api/v1/endpoints/mapi/system/: erasure_coding.py  group_accounts.py  infrastructure.py  operations.py  replication.py  tenants.py  user_accounts.py
backend/app/api/v1/endpoints/mapi/tenant/: content_classes.py  group_accounts.py  settings.py  statistics.py  user_accounts.py
backend/app/api/v1/endpoints/query/: search.py
backend/app/api/v1/endpoints/s3/: buckets.py  credentials.py  multipart.py  objects.py  versions.py
backend/app/core/: auth_utils.py  config.py  middleware.py  security.py  telemetry.py  tenant_routing.py
backend/app/schemas/: common.py  content_class.py  erasure_coding.py  group_account.py  health_check.py  iiif.py  lance.py  license.py  logs.py  namespace.py  network.py  query.py  replication.py  retention_class.py  s3.py  statistics.py  support.py  tenant.py  user_account.py
backend/app/services/: cache_service.py  cached_iiif.py  cached_lance.py  cached_mapi.py  cached_query.py  cached_s3.py  cached_storage.py  iiif_service.py  lance_service.py  mapi_errors.py  mapi_service.py  query_service.py  s3_service.py  serialize_value.py
backend/app/services/kv/: __init__.py  factory.py  store.py
backend/app/services/storage/: __init__.py  base.py  errors.py  factory.py  protocol.py
backend/app/services/storage/adapters/: __init__.py  _boto3_ops.py  generic_boto3.py  hcp.py
backend/mock_server/: __init__.py  fixtures.py  lance_fixtures.py  mapi_state.py  s3_service.py
backend/scripts/: seed_lance_data.py
backend/tests/: conftest.py  test_auth.py  test_auth_utils.py  test_buckets.py  test_cache_integration.py  test_cache_service.py  test_cached_mapi.py  test_cached_query.py  test_cached_s3.py  test_cached_storage_invalidation.py  test_config.py  test_errors.py  test_health.py  test_mapi_optional.py  test_mapi_service.py  test_middleware.py  test_query_service.py  test_redis_integration.py  test_s3_service.py  test_security.py  test_tenant_routing.py  test_tenants.py
backend/tests/cache/: test_cache_integration.py  test_cache_service.py  test_redis_integration.py
backend/tests/lance/: test_lance_endpoints.py  test_serialize_value.py
backend/tests/mapi/: test_cached_mapi.py  test_content_classes.py  test_erasure_coding.py  test_group_accounts.py  test_health_check.py  test_logs.py  test_mapi_service.py  test_namespace_protocols.py  test_namespaces.py  test_replication.py  test_retention_classes.py  test_statistics.py  test_tenants.py  test_user_accounts.py
backend/tests/mapi/namespace/: test_access.py  test_compliance.py  test_indexing.py  test_management.py  test_statistics.py  test_templates.py
backend/tests/mapi/system/: test_erasure_coding.py  test_group_accounts.py  test_infrastructure.py  test_operations.py  test_replication.py  test_tenants.py  test_user_accounts.py
backend/tests/mapi/tenant/: test_content_classes.py  test_group_accounts.py  test_settings.py  test_statistics.py  test_user_accounts.py
backend/tests/query/: conftest.py  test_cached_query.py  test_query_service.py  test_search.py
backend/tests/s3/: test_buckets.py  test_cached_generic.py  test_cached_s3.py  test_credentials.py  test_factory.py  test_generic_boto3.py  test_hcp_compat.py  test_minio_integration.py  test_moto_integration.py  test_moto_server_e2e.py  test_multipart.py  test_objects.py  test_s3_service.py  test_versions.py
components/: index.html
docs/: index.md
examples/: argo-batch-fanout.yaml  argo-etl-pipeline.yaml  argo-tiff-to-jpg.yaml  bulk_upload.py  iiif_stream_to_s3.py  namespace_management.py  staging_commit.py  upload_download.py
frontend/: .env.example  .gitignore  .prettierignore  .prettierrc  README.md  components.json  deno.json  eslint.config.js  package.json  playwright.config.ts  server.ts  svelte.config.js  vite.config.ts  vitest.config.ts
getting-started/: index.html
hcp-platform/: index.html
hcp_docs/: api_findings.md  hcp_nfs.md  hcp_search.md
overrides/: home.html
sdk/: index.html
storybook/: iframe.html  index.html  index.json  project.json
stylesheets/: extra.css
tests/: test_iiif_to_s3_e2e.py
(+3738 files in other folders)
