[project]
name = "rahcp"
version = "0.1.0"
description = "Python SDK & CLI for HCP Unified API"
requires-python = ">=3.13"
dependencies = ["rahcp-client", "rahcp-cli"]

[project.optional-dependencies]
lance = ["rahcp-lance"]
etl = ["rahcp-etl"]
validate = ["rahcp-validate"]
iiif = ["rahcp-iiif"]
all = ["rahcp-lance", "rahcp-etl", "rahcp-validate", "rahcp-iiif"]

[tool.uv.workspace]
members = ["packages/*"]
exclude = ["backend"]

[tool.uv.sources]
rahcp-client = { workspace = true }
rahcp-cli = { workspace = true }
rahcp-lance = { workspace = true }
rahcp-etl = { workspace = true }
rahcp-validate = { workspace = true }
rahcp-iiif = { workspace = true }
rahcp-tracker = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
