[project]
name = "rahcp"
version = "0.1.0"
description = "Python SDK & CLI for HCP Unified API"
requires-python = ">=3.13"
dependencies = ["rahcp-client", "rahcp-cli"]

[project.optional-dependencies]
etl = ["rahcp-etl"]
validate = ["rahcp-validate"]
iiif = ["rahcp-iiif"]
all = ["rahcp-etl", "rahcp-validate", "rahcp-iiif"]

[tool.uv.workspace]
members = ["packages/*"]
exclude = ["backend"]

[tool.uv.sources]
rahcp-client = { workspace = true }
rahcp-cli = { workspace = true }
rahcp-etl = { workspace = true }
rahcp-validate = { workspace = true }
rahcp-iiif = { workspace = true }
rahcp-tracker = { workspace = true }

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.25",
    "respx>=0.22",
    "moto[s3,server]>=5.0",
    "boto3>=1.35",
    "rahcp-validate",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
